[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/UI/Title_Screen/title_test.png" type="Texture" id=1]
[ext_resource path="res://fonts/7x10_font.tres" type="BitmapFont" id=2]
[ext_resource path="res://sound_assests/ui/menu/snd_ui_selection_confirm.wav" type="AudioStream" id=3]
[ext_resource path="res://scripts/UI/Title_Screen.gd" type="Script" id=4]
[ext_resource path="res://sprites/UI/placeholders/ui_arrow_place_holder.png" type="Texture" id=5]

[node name="Title_Screen" type="Node2D"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 426.0
margin_bottom = 240.0
color = Color( 0, 0, 0, 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 168, 66 )
texture = ExtResource( 1 )

[node name="UiArrowPlaceHolder" type="Sprite" parent="."]
visible = false
position = Vector2( 76, 192 )
texture = ExtResource( 5 )
offset = Vector2( 0, 5 )

[node name="Label" type="Label" parent="."]
margin_left = 119.5
margin_top = 187.0
margin_right = 299.5
margin_bottom = 201.0
grow_horizontal = 2
rect_min_size = Vector2( 180, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Press start"
uppercase = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Yield_Timer" type="Timer" parent="."]
pause_mode = 2
process_mode = 0

[node name="ReferenceRect" type="ReferenceRect" parent="."]
margin_right = 320.0
margin_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = -23.0
margin_top = 97.0
margin_right = 297.0
margin_bottom = 239.0
mouse_filter = 0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
margin_left = -23.0
margin_top = 97.0
margin_right = 297.0
margin_bottom = 239.0
mouse_filter = 0
alignment = 1

[node name="TextureButton" type="TextureButton" parent="VBoxContainer2"]
margin_top = 57.0
margin_right = 320.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 12 )

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton"]
margin_left = 42.0
margin_right = 318.0
margin_bottom = 14.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Character 1:"
align = 1
uppercase = true

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer2"]
margin_top = 73.0
margin_right = 320.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 12 )

[node name="Label" type="Label" parent="VBoxContainer2/TextureButton2"]
margin_left = 42.0
margin_right = 318.0
margin_bottom = 14.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Character 2:"
align = 1
uppercase = true

[node name="TextureButton" type="TextureButton" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 12.0
rect_min_size = Vector2( 0, 12 )

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 42.0
margin_right = 318.0
margin_bottom = 14.0
grow_horizontal = 2
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Press start"
align = 1
uppercase = true
